--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Firebase Messaging Demo</title>
-    <style>
-        div {
-            margin-bottom: 15px;
-        }
-    </style>
+    <meta charset=utf-8/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Firebase Cloud Messaging Example</title>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 </head>
 <body>
-<div id="token"></div>
-<div id="msg"></div>
-<div id="error"></div>
-<div id="notification" style="margin-top: 15px; font-weight: bold">
+<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
+        <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
+            <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
+                <h3>Firebase Cloud Messaging</h3>
+            </div>
+        </div>
+    </header>
+    <main class="mdl-layout__content mdl-color--grey-100">
+        <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
+            <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
+                <div class="mdl-card__supporting-text mdl-color-text--grey-600">
+                    <!-- div to display the generated registration token -->
+                    <div id="token_div" style="display: none;">
+                        <h4>Registration Token</h4>
+                        <p class="token" style="word-break: break-all;"></p>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored removeToken"
+                                >Delete Token
+                        </button>
+                    </div>
+                    <div id="permission_div" style="display: none;">
+                        <h4>Needs Permission</h4>
+                        <p class="token"></p>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored requestPermission"
+                                >Request Permission
+                        </button>
+                    </div>
+                    <div id="messages"></div>
+                </div>
+            </div>
+        </div>
+    </main>
 </div>
 </body>
 </html>
